objects/ASI_CRM_Sales_Movement__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account_Group__c</fullName>
        <formula>ASI_CRM_Market_Visit__r.ASI_CRM_Account_Group__c</formula>
        <label>Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Record_Type__c</fullName>
        <formula>ASI_CRM_VisitationPlanDetail__r.ASI_HK_CRM_Account_Record_Type__c</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_RSP__c</fullName>
        <label>Actual RSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Stock__c</fullName>
        <label>Current Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Draft_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Facing__c</fullName>
        <label>Facing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Account_Number__c</fullName>
        <description>Retrieved from customer</description>
        <formula>ASI_CRM_Account__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Visit</label>
        <referenceTo>ASI_CRM_Market_Visit__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Menu_Price__c</fullName>
        <label>Menu Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>TEXT(MONTH( ASI_CRM_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Presence_Count__c</fullName>
        <formula>IF( ASI_CRM_Presence__c,1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_1__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_TH_CRM_Product_Group_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_2__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_TH_CRM_Product_Group_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_3__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_CRM_Product_Group_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_BMC__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_CRM_Product_Group_BMC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group BMC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Period_From__c</fullName>
        <label>Promotion Period - From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Period_To__c</fullName>
        <label>Promotion Period - To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type_Others__c</fullName>
        <label>Promotion Type (Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New List-in</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Price-off</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP__c</fullName>
        <label>RSP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ASI_TH_CRM_Category__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Stock_CVS__c</fullName>
        <formula>IF( TEXT(ASI_CRM_Account__r.ASI_TH_CRM_Region__c)  = &quot;CVS&quot;, ASI_CRM_List_Price__c ,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock (CVS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visibility_Count__c</fullName>
        <formula>IF( ASI_CRM_Visibility__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visibility Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VisitationPlanDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipLabel>Sales Movements</relationshipLabel>
        <relationshipName>Sales_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_CRM_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Sales Movement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Sales Movement Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Movements</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_SalesMovement</fullName>
        <active>true</active>
        <label>ASI_CRM_TH_SalesMovement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_SalesMovement</fullName>
        <active>true</active>
        <label>ASI_CRM_TW_SalesMovement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>